# C-Utility-Library

./: .gitignore  CMakeLists.txt  README.md  cm.bat  compile_commands.json  d.bat  m.bat  mc.bat  r.bat
include/: Commons.h  Debug.h  Defines.h  Dictionary.h  FileUtils.h  Hash.h  Json.h  LinkedList.h  MemoryUtils.h  StringUtils.h  Timer.h
include/containers/: Array.h  Dictionary.h  HashMap.h  LinkedList.h  List.h  Map.h  UniqueArray.h
src/: Array.c  Commons.c  Dictionary.c  FileUtils.c  Hash.c  Json.c  LinkedList.c  Map.c  MemoryUtils.c  StringUtils.c  Timer.c
src/containers/: Array.c  Dictionary.c  HashMap.c  LinkedList.c  List.c  Map.c  UniqueArray.c
test/: main.c  test_containers.c  test_containers.h  tests.c  tests.h
